@@ -42,6 +42,7 @@ This feature was developed by Jake Howard.
  * Users now remain on the edit page after saving a snippet as draft (Sage Abdullah)
  * Base project template now populates the meta description tag from the search description field (Aman Pandey)
  * Added support for `azure-mgmt-cdn` version >= 10 and `azure-mgmt-frontdoor` version >= 1 in the frontend cache invalidator (Sylvain Fankhauser)
+ * Add a system check to warn when a `django-storages` backend is configured to allow overwriting (Rishabh jain)
 
 ### Bug fixes
 
