@@ -20,6 +20,7 @@ Changelog
  * Users now remain on the edit page after saving a snippet as draft (Sage Abdullah)
  * Base project template now populates the meta description tag from the search description field (Aman Pandey)
  * Added support for `azure-mgmt-cdn` version >= 10 and `azure-mgmt-frontdoor` version >= 1 in the frontend cache invalidator (Sylvain Fankhauser)
+ * Add a system check to warn when a `django-storages` backend is configured to allow overwriting (Rishabh jain)
  * Fix: Make sure workflow timeline icons are visible in high-contrast mode (Loveth Omokaro)
  * Fix: Ensure authentication forms (login, password reset) have a visible border in Windows high-contrast mode (Loveth Omokaro)
  * Fix: Ensure visual consistency between buttons and links as buttons in Windows high-contrast mode (Albina Starykova)
